[gd_scene load_steps=2 format=3 uid="uid://b42hy2u72jocm"]

[ext_resource type="Script" path="res://scripts/dialog/create_project_dialog.gd" id="1_led5d"]

[node name="CreateProjectDialog" type="ConfirmationDialog"]
title = "Create New Project"
position = Vector2i(0, 36)
size = Vector2i(400, 292)
ok_button_text = "Create"
script = ExtResource("1_led5d")
error_color = Color(1, 0.278431, 0.435294, 1)
warning_color = Color(1, 0.501961, 0.258824, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 243.0
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Project Name:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 36)
layout_mode = 2

[node name="ProjectName" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateFolder" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create Folder"

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Project Path:"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 36)
layout_mode = 2

[node name="ProjectPath" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="Browse" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Browse"

[node name="ErrorLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0, 0, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Project Type:"

[node name="ProjectType" type="OptionButton" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Mod"
popup/item_0/id = 0
popup/item_1/text = "Game (Collection of Mods)"
popup/item_1/id = 1

[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/ProjectName" to="." method="_test_name"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/CreateFolder" to="." method="_on_create_folder_pressed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/ProjectPath" to="." method="_test_path"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Browse" to="." method="_on_browse_pressed"]
